--- a/views/search.ejs
+++ b/views/search.ejs
@@ -12,7 +12,7 @@
 	<!-- Zocial for twitter login button -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/css-social-buttons/1.2.0/css/zocial.min.css" rel="stylesheet">
 	<!-- fontawesome for like and unlike buttons -->
-	<link href="http://weloveiconfonts.com/api/?family=fontawesome" rel="stylesheet">
+	<link href="https://weloveiconfonts.com/api/?family=fontawesome" rel="stylesheet">
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 	<!-- Call to index.js not search.js... Both are exactly the same. No search.js is created. -->
